packages/java/src/main/resources/natives/macos-arm64/include/xberg.h


typedef struct XBERGExtractInput XBERGExtractInput;
typedef struct XBERGExtractionConfig XBERGExtractionConfig;
typedef struct XBERGExtractionResult XBERGExtractionResult;
typedef struct XBERGLayoutDetectionConfig XBERGLayoutDetectionConfig;
typedef struct XBERGMetadata XBERGMetadata;
typedef struct XBERGMultidocThresholds XBERGMultidocThresholds;
typedef struct XBERGOcrConfig XBERGOcrConfig;
typedef struct XBERGOcrQualityThresholds XBERGOcrQualityThresholds;
typedef struct XBERGPaddleOcrConfig XBERGPaddleOcrConfig;
typedef struct XBERGPageConfig XBERGPageConfig;
typedef struct XBERGPageRange XBERGPageRange;
typedef struct XBERGPageSignals XBERGPageSignals;
typedef struct XBERGPdfConfig XBERGPdfConfig;
typedef struct XBERGPostProcessorConfig XBERGPostProcessorConfig;
typedef struct XBERGPreset XBERGPreset;
typedef struct XBERGPresetSummary XBERGPresetSummary;
typedef struct XBERGQrCode XBERGQrCode;
typedef struct XBERGRakeParams XBERGRakeParams;
typedef struct XBERGRedactionConfig XBERGRedactionConfig;
typedef struct XBERGRedactionPattern XBERGRedactionPattern;
typedef struct XBERGRedactionTerm XBERGRedactionTerm;
typedef struct XBERGRerankedDocument XBERGRerankedDocument;
typedef struct XBERGRerankerConfig XBERGRerankerConfig;
typedef struct XBERGResolvedPreset XBERGResolvedPreset;
typedef struct XBERGSecurityLimits XBERGSecurityLimits;
typedef struct XBERGServerConfig XBERGServerConfig;
typedef struct XBERGSupportedFormat XBERGSupportedFormat;
typedef struct XBERGSvgOptions XBERGSvgOptions;
typedef struct XBERGTesseractConfig XBERGTesseractConfig;
typedef struct XBERGTokenReductionConfig XBERGTokenReductionConfig;
typedef struct XBERGTokenReductionOptions XBERGTokenReductionOptions;
typedef struct XBERGTranscriptionConfig XBERGTranscriptionConfig;
typedef struct XBERGTreeSitterConfig XBERGTreeSitterConfig;
typedef struct XBERGTreeSitterProcessConfig XBERGTreeSitterProcessConfig;
typedef struct XBERGUrlExtractionConfig XBERGUrlExtractionConfig;
typedef struct XBERGYakeParams XBERGYakeParams;
char *xberg_svg_options_to_json(const XBERGSvgOptions *ptr);
void xberg_svg_options_free(XBERGSvgOptions *ptr);
char *xberg_url_extraction_config_to_json(const XBERGUrlExtractionConfig *ptr);
void xberg_url_extraction_config_free(XBERGUrlExtractionConfig *ptr);
char *xberg_token_reduction_options_to_json(const XBERGTokenReductionOptions *ptr);
void xberg_token_reduction_options_free(XBERGTokenReductionOptions *ptr);
char *xberg_layout_detection_config_to_json(const XBERGLayoutDetectionConfig *ptr);
void xberg_layout_detection_config_free(XBERGLayoutDetectionConfig *ptr);
char *xberg_ocr_quality_thresholds_to_json(const XBERGOcrQualityThresholds *ptr);
void xberg_ocr_quality_thresholds_free(XBERGOcrQualityThresholds *ptr);
char *xberg_ocr_config_to_json(const XBERGOcrConfig *ptr);
void xberg_ocr_config_free(XBERGOcrConfig *ptr);
char *xberg_page_config_to_json(const XBERGPageConfig *ptr);
void xberg_page_config_free(XBERGPageConfig *ptr);
char *xberg_pdf_config_to_json(const XBERGPdfConfig *ptr);
void xberg_pdf_config_free(XBERGPdfConfig *ptr);
char *xberg_post_processor_config_to_json(const XBERGPostProcessorConfig *ptr);
void xberg_post_processor_config_free(XBERGPostProcessorConfig *ptr);
char *xberg_redaction_config_to_json(const XBERGRedactionConfig *ptr);
char *xberg_redaction_term_to_json(const XBERGRedactionTerm *ptr);
void xberg_redaction_term_free(XBERGRedactionTerm *ptr);
char *xberg_redaction_pattern_to_json(const XBERGRedactionPattern *ptr);
void xberg_redaction_pattern_free(XBERGRedactionPattern *ptr);
char *xberg_reranker_config_to_json(const XBERGRerankerConfig *ptr);
char *xberg_transcription_config_to_json(const XBERGTranscriptionConfig *ptr);
void xberg_transcription_config_free(XBERGTranscriptionConfig *ptr);
char *xberg_tree_sitter_config_to_json(const XBERGTreeSitterConfig *ptr);
void xberg_tree_sitter_config_free(XBERGTreeSitterConfig *ptr);
char *xberg_tree_sitter_process_config_to_json(const XBERGTreeSitterProcessConfig *ptr);
void xberg_tree_sitter_process_config_free(XBERGTreeSitterProcessConfig *ptr);
char *xberg_supported_format_to_json(const XBERGSupportedFormat *ptr);
void xberg_supported_format_free(XBERGSupportedFormat *ptr);
char *xberg_server_config_to_json(const XBERGServerConfig *ptr);
char *xberg_security_limits_to_json(const XBERGSecurityLimits *ptr);
void xberg_security_limits_free(XBERGSecurityLimits *ptr);
char *xberg_token_reduction_config_to_json(const XBERGTokenReductionConfig *ptr);
void xberg_token_reduction_config_free(XBERGTokenReductionConfig *ptr);
char *xberg_tesseract_config_to_json(const XBERGTesseractConfig *ptr);
void xberg_tesseract_config_free(XBERGTesseractConfig *ptr);
char *xberg_metadata_to_json(const XBERGMetadata *ptr);
char *xberg_qr_code_to_json(const XBERGQrCode *ptr);
void xberg_qr_code_free(XBERGQrCode *ptr);
char *xberg_reranked_document_to_json(const XBERGRerankedDocument *ptr);
void xberg_reranked_document_free(XBERGRerankedDocument *ptr);
char *xberg_yake_params_to_json(const XBERGYakeParams *ptr);
void xberg_yake_params_free(XBERGYakeParams *ptr);
char *xberg_rake_params_to_json(const XBERGRakeParams *ptr);
void xberg_rake_params_free(XBERGRakeParams *ptr);
char *xberg_page_range_to_json(const XBERGPageRange *ptr);
char *xberg_page_signals_to_json(const XBERGPageSignals *ptr);
void xberg_page_signals_free(XBERGPageSignals *ptr);
char *xberg_multidoc_thresholds_to_json(const XBERGMultidocThresholds *ptr);
char *xberg_resolved_preset_to_json(const XBERGResolvedPreset *ptr);
void xberg_resolved_preset_free(XBERGResolvedPreset *ptr);
char *xberg_preset_to_json(const XBERGPreset *ptr);
char *xberg_preset_summary_to_json(const XBERGPresetSummary *ptr);
void xberg_preset_summary_free(XBERGPresetSummary *ptr);
char *xberg_paddle_ocr_config_to_json(const XBERGPaddleOcrConfig *ptr);
XBERGExtractionResult *xberg_extract(const XBERGExtractInput *input,
                                     const XBERGExtractionConfig *config);
XBERGExtractionResult *xberg_extract_batch(const char *inputs,
                                           const XBERGExtractionConfig *config);