packages/csharp/src/Xberg/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_layout_detection_config_to_json")]
    internal static extern IntPtr LayoutDetectionConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_layout_detection_config_free")]
    internal static extern void LayoutDetectionConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_metadata_to_json")]
    internal static extern IntPtr MetadataToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_multidoc_thresholds_to_json")]
    internal static extern IntPtr MultidocThresholdsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_ocr_config_to_json")]
    internal static extern IntPtr OcrConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_ocr_config_free")]
    internal static extern void OcrConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_ocr_quality_thresholds_to_json")]
    internal static extern IntPtr OcrQualityThresholdsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_ocr_quality_thresholds_free")]
    internal static extern void OcrQualityThresholdsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_to_json")]
    internal static extern IntPtr PaddleOcrConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_config_to_json")]
    internal static extern IntPtr PageConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_config_free")]
    internal static extern void PageConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_range_to_json")]
    internal static extern IntPtr PageRangeToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_signals_to_json")]
    internal static extern IntPtr PageSignalsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_signals_free")]
    internal static extern void PageSignalsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_pdf_config_to_json")]
    internal static extern IntPtr PdfConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_pdf_config_free")]
    internal static extern void PdfConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_post_processor_config_to_json")]
    internal static extern IntPtr PostProcessorConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_post_processor_config_free")]
    internal static extern void PostProcessorConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_preset_to_json")]
    internal static extern IntPtr PresetToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_preset_summary_to_json")]
    internal static extern IntPtr PresetSummaryToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_preset_summary_free")]
    internal static extern void PresetSummaryFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_qr_code_to_json")]
    internal static extern IntPtr QrCodeToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_qr_code_free")]
    internal static extern void QrCodeFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_rake_params_to_json")]
    internal static extern IntPtr RakeParamsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_rake_params_free")]
    internal static extern void RakeParamsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_config_to_json")]
    internal static extern IntPtr RedactionConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_pattern_to_json")]
    internal static extern IntPtr RedactionPatternToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_pattern_free")]
    internal static extern void RedactionPatternFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_term_to_json")]
    internal static extern IntPtr RedactionTermToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_term_free")]
    internal static extern void RedactionTermFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_reranked_document_to_json")]
    internal static extern IntPtr RerankedDocumentToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_reranked_document_free")]
    internal static extern void RerankedDocumentFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_reranker_config_to_json")]
    internal static extern IntPtr RerankerConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_reranker_preset_to_json")]
    internal static extern IntPtr RerankerPresetToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_reranker_preset_free")]
    internal static extern void RerankerPresetFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_resolved_preset_to_json")]
    internal static extern IntPtr ResolvedPresetToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_resolved_preset_free")]
    internal static extern void ResolvedPresetFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_security_limits_to_json")]
    internal static extern IntPtr SecurityLimitsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_security_limits_free")]
    internal static extern void SecurityLimitsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_to_json")]
    internal static extern IntPtr ServerConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_structured_thresholds_to_json")]
    internal static extern IntPtr StructuredThresholdsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_supported_format_to_json")]
    internal static extern IntPtr SupportedFormatToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_supported_format_free")]
    internal static extern void SupportedFormatFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_svg_options_to_json")]
    internal static extern IntPtr SvgOptionsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_svg_options_free")]
    internal static extern void SvgOptionsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_tesseract_config_to_json")]
    internal static extern IntPtr TesseractConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_tesseract_config_free")]
    internal static extern void TesseractConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_token_reduction_config_to_json")]
    internal static extern IntPtr TokenReductionConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_token_reduction_config_free")]
    internal static extern void TokenReductionConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_token_reduction_options_to_json")]
    internal static extern IntPtr TokenReductionOptionsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_token_reduction_options_free")]
    internal static extern void TokenReductionOptionsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_transcription_config_to_json")]
    internal static extern IntPtr TranscriptionConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_transcription_config_free")]
    internal static extern void TranscriptionConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_tree_sitter_config_to_json")]
    internal static extern IntPtr TreeSitterConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_tree_sitter_config_free")]
    internal static extern void TreeSitterConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_tree_sitter_process_config_to_json")]
    internal static extern IntPtr TreeSitterProcessConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_tree_sitter_process_config_free")]
    internal static extern void TreeSitterProcessConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_url_extraction_config_to_json")]
    internal static extern IntPtr UrlExtractionConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_url_extraction_config_free")]
    internal static extern void UrlExtractionConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_yake_params_to_json")]
    internal static extern IntPtr YakeParamsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_yake_params_free")]
    internal static extern void YakeParamsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract")]
    internal static extern IntPtr Extract(
        IntPtr input,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_batch")]
    internal static extern IntPtr ExtractBatch(
        IntPtr inputs,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_detect_mime_type_from_bytes")]
    internal static extern IntPtr DetectMimeTypeFromBytes(
        IntPtr content,
        UIntPtr contentLen
    );
